fixed image spacing and copy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 */
 /***** Labrot-navbar ***************************/
 .labrot-rm-padding{
-    padding: 0 !important;
+    padding: 0;
 }
 .labrot-brand-logo{
     font-weight: 900;
@@ -68,8 +68,16 @@ body,
     color: rgba(0,0,0,0.6);
 }
 
+
 .carousel.labrot-home-carousel{
     background: linear-gradient(to left, #d5dedf, #57585a);
+    position: relative;
+    display: inline-block;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: calc(100vh - 60px);
+    min-width: 100%;
     
 }
 .carousel-inner.labrot-carousel-inner .item:after {
@@ -84,7 +92,9 @@ body,
 
 .carousel.labrot-home-carousel{
     position: relative;
+
 }
+
 .carousel.labrot-home-carousel  .left.carousel-control, .carousel.labrot-home-carousel  .right.carousel-control{
     background-image: none;
 }
@@ -112,26 +122,7 @@ body,
     margin-left: -30%;
     text-align: center;
     list-style: none;
-}
-/*.carousel.labrot-home-carousel .carousel-control{
-    position: absolute;
-    top: 50%;
-    bottom: 0;
-    left: 0;
-    width: 10%;
-    font-size: 10px;
-    color: #fff;
-    text-shadow: 0 1px 2px rgba(0,0,0,.6);
-    background-color: rgba(0,0,0,0);
-    opacity: .5;
-}*/
-.labrot-toogle-down{
-    margin: 0;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+
 }
 .labrot-down-icon{
     font-size: 50px;
@@ -151,6 +142,7 @@ body,
     }
 }
 /***** Home Section Over*******************/
+
 /****** labrot-about-section *****************************/
 .labrot-about-container{
     position: relative;
@@ -224,37 +216,26 @@ body,
 .labrot-rm-padding:hover .labrot-port-hover-head, .labrot-rm-padding:hover .labrot-port-hover-sub-head, .labrot-rm-padding:hover .labrot-port-hover-icon{
     visibility: visible;
     opacity: 1;
+}
+
+.labrot-port-img.img-responsive {
+   
+        position: relative;
+        display: inline-block;
+        background-image: url(assets/images/portfolio/port-1.jpeg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: calc(100vh - 60px);
+        min-width: 100%;
 
 }
+
+
 
 */
-.labrot-port-all-btn{
-    margin-top: 20px;
-    position: relative;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
-    border-radius: 2px;
-    border: 2px solid  #222831;
-    background-color: #eeeeee;
-    color:  #222829;
-    transition: .2s;
-}
-.labrot-port-all-btn:hover{
-    border: 2px solid  #222831;
-    background-color:  #222831;
-    color: #eeeeee;
-}
-.labrot-port-all-btn:focus{
-    outline: none;
-    border: 2px solid  #222831;
-    background-color:  #222831;
-    color: #eeeeee;
-    box-shadow: inset 0px 0px 10px rgba(255,255,255, 0.05);
-    /*outline: none;
-    border: 2px solid  #222831;
-    background-color:  #eeeeee;
-    color: #222831;*/
-}
+
+
 .labrot-port-all-btn:active:focus, .labrot-port-all-btn:active{
     outline: none;
     border: 2px solid  #222831;
